# synthlearners

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: index.html  search.js  synthlearners.html
notebooks/: AbadieDiamondHainmueller2015.ipynb  PenguinSynth.ipynb  adelie_backend.ipynb  cvxpy_reference.ipynb  demo.ipynb  demo_crossvalidate.ipynb  demo_mcnnm.ipynb  dynbalance_vs_msm.ipynb  minimal.R  panel_data_with_selection.ipynb
scripts/: build_docs.sh  compare_dynbal_solvers.py
synthlearners/: __init__.py  crossvalidation.py  dynbalance.py  ensemble.py  lbw.py  mcnnm.py  plotting.py  simulator.py  solvers.py  synth.py  utils.py
tests/: test_clean_sdid.py  test_crossvalidation.py  test_dynbalance.py  test_ensemble.py  test_mcnnm.py  test_synths.py
