[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project]
name = "synthlearners"
version = "0.1.1"
authors = [{ name = "Apoorva Lal", email = "lal.apoorva@gmail.com" }]
description = "Fast, scalable synthetic control methods for panel data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "adelie",
]

[project.urls]
"Homepage" = "https://github.com/apoorvalal/synthlearners"
"Bug Tracker" = "https://github.com/apoorvalal/synthlearners/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]
full = [
    "scipy",
    "pyensmallen",
    "seaborn",
    "faiss-cpu",
    "scikit-learn",
    "joblib",
    "tqdm",
    "ipywidgets",
]

[tool.hatch.build.targets.wheel]
packages = ["synthlearners"]
